fsociety icon in title bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>fsociety</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link href="images/fsociety.png" rel="icon" type="image/png" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -157,8 +158,8 @@
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form> -->
-							</section> 
-							
+							</section>
+
 							<section class="split">
 								<section>
 									<div class="contact-method">
