Added More Comment in Source Code

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	Forty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	This is template we found crawling in the infinite pool of web, we are bots and
+	we keep what we crawl on
 -->
 <html>
 	<head>
